feat: update de texto da página

--- a/Wikipedia-Clone/apostaDePastal.html
+++ b/Wikipedia-Clone/apostaDePastal.html
@@ -39,7 +39,7 @@
         <div class="div2">
             Sumário
             <ul>
-                <li>A aposta</li>
+                <li><a href="#aposta">A aposta</a></li>
                 <li>Incapacidade de acreditar</li>
                 <li>Crítica</li>
                 <li>Argumento do Apelo do Medo</li>
@@ -66,8 +66,16 @@
             e antecipou filosofias futuras como o existencialismo, pragmatismo e voluntarismo.[1]
             </p>
 
+            <p> <h2 id="aposta">A aposta</h2>
+                <ul>
+                    <li>se acreditar em Deus e estiver certo, terei um ganho infinito;</li>
+                    <li>se acreditar em Deus e estiver errado, terei uma perda finita;</li>
+                    <li>se não acreditar em Deus e estiver certo, terei um ganho finito;</li>
+                    <li>se não acreditar em Deus e estiver errado, terei uma perda infinita.</li>
+                </ul>
+            </p>
 
-            <p>Incapacidade de acreditar<br>
+            <p><h2>Incapacidade de acreditar</h2><br>
             Pascal referenciou a dificuldade que temos em diferenciar a razão e o processo de "racionalidade", pondo em contraste com a ação de 
             genuinamente acreditar em algo, propondo que: " atuar como se [alguém) acreditasse" pode "curar (alguém) de não acreditar".
 
@@ -84,6 +92,32 @@
             </p>
 
 
+            <p><h2>Análise através da teoria da decisão</h2><br>
+                As possibilidades definidas pela aposta de Pascal podem ser pensadas como uma escolha em indecisão com os valores da matriz 
+                de decisão seguinte: <br>
+
+                <table>
+
+                    <tr>
+                    <th></th>
+                    <th>Deus existe (G)</th>
+                    <th>Deus não existe (¬G) </th>
+                    </tr>
+
+
+                    <tr>
+                        <td><b>Acreditar (B)</b></td>
+                        <td>+∞ (ganho infinito)</td>
+                        <td>−1 (perda finita — 1 vida)</td>                    
+                    </tr>
+
+                    <tr>
+                        <td><b>Não acreditar (¬B)</b></td>
+                        <td>−∞ (perda infinita)</td>
+                        <td>+1 (ganho finito — 1 vida)</td>
+                    </tr>
+                </table>
+            </p>
 
         </div>
     
